@@ -1,5 +1,7 @@
 2010-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* config.py (GConf.get_int): Fixed a bug. If the key is invalid,
+	  "None" object is returned (issue #34).
 	* photoframe.py: Added support for border color config. (issue #34)
 	* rss.py: Added support for images in <content:encoded>, feed
 	  titles in Photo Source Preferences.
